[package]
name = "common"
version = "0.1.0"
authors = ["Target"]

[dependencies]
protobuf = "2.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
rust_crypto = {git = "https://github.com/agunde406/rust-crypto", branch="wasm_sha2"}


[target.'cfg(unix)'.dependencies]
rustc-serialize = "0.3.22"
rust-crypto = "0.2"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"
